[package]
name = "duckduckgo"
version = "0.2.1"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2024"
description = "🦆 A CLI and library for colorful DuckDuckGo searches."
license = "MIT"
homepage = "https://github.com/wiseaidotdev/duckduckgo"
documentation = "https://docs.rs/duckduckgo"
repository = "https://github.com/wiseaidotdev/duckduckgo"
keywords = ["cli", "duckduckgo", "search", "dorks", "api"]
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-client",
    "text-processing",
    "accessibility"
]
exclude = ["/tests", ".*"]

[[bin]]
name = "ddg"
path = "src/bin/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }
reqwest = { version = "0.13.2", features = ["cookies", "json", "query"] }
serde = { version = "1.0.219", features = ["derive"] }
phf = { version = "0.12.1", features = ["macros"] }
chrono = "0.4.44"
scraper = "0.26.0"
anyhow = "1.0.102"
regex = "1.12.3"
urlencoding = "2.1.3"
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }

[features]
default = []
cli = ["clap", "tokio"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 3
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }
