[package]
name = "duckduckgo"
version = "0.2.3"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2024"
description = "🦆 A CLI, TUI, and SDK for instant DuckDuckGo searches."
license = "MIT"
homepage = "https://github.com/wiseaidotdev/duckduckgo"
documentation = "https://docs.rs/duckduckgo"
repository = "https://github.com/wiseaidotdev/duckduckgo"
keywords = ["cli", "duckduckgo", "search", "dorks", "api"]
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-client",
    "text-processing",
    "accessibility",
]
exclude = [
    "/tests",
    ".*",
    "/python",
    "/bin",
    "/assets",
    "NODE.md",
    "PYTHON.md",
    "RUST.md",
    "WASM.md",
    "CLI.md",
    "package.json",
    "package-lock.json",
    "pyproject.toml",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ddg"
path = "src/bin/main.rs"
required-features = ["rust-binary"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
phf = { version = "0.12.1", features = ["macros"] }
chrono = "0.4.44"
scraper = "0.26.0"
anyhow = "1.0.102"
regex = "1.12.3"
urlencoding = "2.1.3"
serde_json = "1.0.149"
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }
napi = { version = "3.8.5", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "3.5.4", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.2", features = ["cookies", "json", "query"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query"] }
chrono = { version = "0.4.44", features = ["wasmbind"] }

[build-dependencies]
napi-build = { version = "2.3.1", optional = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
yew = { version = "0.23.0", features = ["csr"] }

[features]
default = []
rust-binary = ["cli"]
cli = ["clap", "tokio"]
python = ["pyo3", "cli"]
node = ["napi", "napi-derive", "napi-build", "cli"]

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }
